<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">em@il</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sender">From:</string>
    <string name="recipient">To:</string>
    <string name="carbon_copy">Cc:</string>
    <string name="blind_carbon_copy">Bcc:</string>
    <string name="Topic_of_email">Subject:</string>
    <string name="send_message">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="return_to">Back</string>
    <string name="clear_content">Clear</string>
    <string name="body_email">Comment:</string>

</resources>
